Genre Endpoints + Middleware
